--- a/.github/workflows/check-black.yml
+++ b/.github/workflows/check-black.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install .
+        pip install -r tests/requirements.txt
     - name: Check black
       run: |
         black --check concrete_mailer
