--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -20,8 +20,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-extra.txt
+        pip install .
+        pip install -r tests/requirements.txt
     - name: Lint with pylint
       run: |
         pylint -E concrete_mailer
