--- a/.github/workflows/check-tests.yml
+++ b/.github/workflows/check-tests.yml
@@ -20,11 +20,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-extra.txt
+        pip install .
+        pip install -r tests/requirements.txt
     - name: Test with pytest
       run: |
-        pytest -s concrete_mailer --pyargs -q tests --cov --cov-report html --cov-report term
+        pytest -s concrete_mailer --pyargs -q tests --cov --cov-report html --cov-report term --cov-config tests/.coveragerc
     - name: Tests coverage with CodeCov
       run: |
         codecov
