Update contacts info

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = ConcreteMailer
 version = attr: concrete_mailer.__version__
 author = Netsach
-author_email = contact@netsach.com
+author_email = contact@netsach.org
 description = Python package for sending rich e-mails.
 long_description = file: README.md
 classifiers =
