--- a/.github/workflows/check-bandit.yml
+++ b/.github/workflows/check-bandit.yml
@@ -20,8 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
-        pip install -r tests/requirements.txt
+        pip install bandit
     - name: Bandit
       run: |
         bandit concrete_mailer -r --exclude tests
