--- a/.github/workflows/check-black.yml
+++ b/.github/workflows/check-black.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python-version: [3.6, 2.7]
+        python-version: [3.6]
 
     steps:
     - uses: actions/checkout@v1
@@ -20,8 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
-        pip install -r tests/requirements.txt
+        pip install black
     - name: Check black
       run: |
         black --check concrete_mailer
