--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install -r tests/requirements.txt
+        pip install pylint
     - name: Lint with pylint
       run: |
         pylint -E concrete_mailer
