--- a/.github/workflows/check-tests.yml
+++ b/.github/workflows/check-tests.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install -r tests/requirements.txt
+        pip install pytest codecov mock pytest-cov
     - name: Test with pytest
       run: |
         pytest -s concrete_mailer --pyargs -q tests --cov --cov-report html --cov-report term --cov-config tests/.coveragerc
