fix package name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = ConcreteMailer
+name = concrete-mailer
 version = attr: concrete_mailer.__version__
 author = Netsach
 author_email = contact@netsach.org
