--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,14 @@ author = Netsach
 author_email = contact@netsach.org
 description = Python package for sending rich e-mails.
 long_description = file: README.md
+long_description_content_type = text/markdown
+license = GNU GENERAL PUBLIC LICENSE Version 3
+license-file = LICENSE
+home-page = https://github.com/Netsach/concrete-mailer/
+project_urls =
+    Bug Tracker = https://github.com/Netsach/concrete-mailer/issues
+    Documentation = https://github.com/Netsach/concrete-mailer/blob/master/README.md
+    Source Code = https://github.com/Netsach/concrete-mailer/
 classifiers =
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3.6
