--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -20,8 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
-        pip install pylint
+        pip install -e ".[lint]"
     - name: Lint with pylint
       run: |
         pylint -E concrete_mailer
