--- a/.github/workflows/check-tests.yml
+++ b/.github/workflows/check-tests.yml
@@ -20,8 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
-        pip install pytest codecov mock pytest-cov
+        pip install -e ".[tests]"
     - name: Test with pytest
       run: |
         pytest -s concrete_mailer --pyargs -q tests --cov --cov-report html --cov-report term --cov-config tests/.coveragerc
