--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,16 @@ install_requires =
     premailer>=3.6.1,<4
     beautifulsoup4>=4.8.0,<5
     jinja2>=2.10.1,<3
+
+[options.extras_require]
+tests =
+    mock
+    pytest-cov
+    pytest
+    codecov
+security =
+    bandit
+lint =
+    pylint
+lint_py3 =
+    black
