--- a/setup.cfg
+++ b/setup.cfg
@@ -38,3 +38,38 @@ lint =
     pylint
 lint_py3 =
     black
+
+[coverage:report]
+# With regex
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+    skip-test-coverage
+    # Custom for block
+    PragmaContextNoCover
+
+    # Don't complain about missing debug-only code:
+    def __repr__
+    if self\.debug
+    if settings\.DEBUG
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
+    raise NotImplementedError
+    raise RuntimeError
+
+    # Don't complain if non-runnable code isn't run:
+    if 0:
+    if __name__ == .__main__.:
+
+[coverage:run]
+omit =
+    */tests/*
+
+include =
+    *concrete_mailer*
+
+
+[coverage:html]
+title = concrete-mailer - Code coverage
+directory = ./tests/coverage/
