--- a/.github/workflows/check-black.yml
+++ b/.github/workflows/check-black.yml
@@ -23,4 +23,4 @@ jobs:
         pip install black
     - name: Check black
       run: |
-        black --check concrete_mailer
+        black --check --line-length=79 --skip-string-normalization concrete_mailer
