Update black usage, pyproject.toml not necessary here

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,10 +34,9 @@ tests =
     codecov
 security =
     bandit
-lint =
+quality =
     pylint
-lint_py3 =
-    black
+    black; python_version >= "3.6"
 
 [coverage:report]
 # With regex
