--- a/.github/workflows/check-bandit.yml
+++ b/.github/workflows/check-bandit.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install bandit
+        pip install -e ".[security]"
     - name: Bandit
       run: |
         bandit concrete_mailer -r --exclude tests
