Enable python 3.7 and 3.8 within workflows

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ project_urls =
 classifiers =
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 
 [options]
 packages = find:
