--- a/setup.cfg
+++ b/setup.cfg
@@ -28,8 +28,9 @@ install_requires =
     beautifulsoup4>=4.8.0,<5
     jinja2>=2.10.1,<3
 
-[exclude]
-
+[options.packages.find]
+exclude =
+    tests
 
 [options.extras_require]
 tests =
