--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ project_urls =
     Bug Tracker = https://github.com/Netsach/concrete-mailer/issues
     Documentation = https://github.com/Netsach/concrete-mailer/blob/master/README.md
     Source Code = https://github.com/Netsach/concrete-mailer/
+    Coverage = https://codecov.io/gh/Netsach/concrete-mailer
 classifiers =
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3.6
