--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,8 @@ description = Python package for sending rich e-mails.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = GNU GENERAL PUBLIC LICENSE Version 3
-license-file = LICENSE
-home-page = https://github.com/Netsach/concrete-mailer/
+license_file = LICENSE
+home_page = https://github.com/Netsach/concrete-mailer/
 project_urls =
     Bug Tracker = https://github.com/Netsach/concrete-mailer/issues
     Documentation = https://github.com/Netsach/concrete-mailer/blob/master/README.md
